# sap-zephyr-module

./: .gitignore  AGENTS.md  CMakeLists.txt  Kconfig  README.md  README.rst  TODO.md  demo_logging.conf  prj.conf  sample.yaml
doc/: flow.rst
hex/: nrf54l15dk_cpuapp_26a25e7_leaf-id1.hex  nrf54l15dk_cpuapp_26a25e7_leaf-id2.hex  nrf54l15dk_cpuapp_26a25e7_leaf-id3.hex  nrf54l15dk_cpuapp_26a25e7_root.hex
include/sap/: sap_protocol.h  sap_service.h  sap_trace.h
samples/bluetooth/sap_demo/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  README.rst  central.conf  packet_logging.conf  peripheral.conf  peripheral_id2.conf  peripheral_id3.conf  peripheral_id4.conf  peripheral_no_dfu.conf  prj.conf  sample.yaml  sysbuild.cmake  upstream_bleak.conf
samples/bluetooth/sap_demo/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp_ns.overlay  xiao_nrf54l15_nrf54l15_cpuapp_ns.conf  xiao_nrf54l15_nrf54l15_cpuapp_ns.overlay
samples/bluetooth/sap_demo/doc/: flow.rst
samples/bluetooth/sap_demo/src/: demo_credentials.c  demo_credentials.h  demo_protocol.h  main.c  sap_central.c  sap_peripheral.c
samples/bluetooth/sap_demo/sysbuild/boards/: xiao_nrf54l15_nrf54l15_cpuapp_mcuboot.overlay
samples/bluetooth/sap_demo/sysbuild/mcuboot/: prj.conf
samples/bluetooth/sap_demo/sysbuild/mcuboot/boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay  xiao_nrf54l15_nrf54l15_cpuapp.conf
samples/bluetooth/sap_demo/sysbuild/mcuboot_secondary_app/: prj.conf
samples/bluetooth/sap_demo/sysbuild/mcuboot_secondary_app/boards/: xiao_nrf54l15_nrf54l15_cpuapp_ns.overlay
scripts/: explain_sap_kmu.sh  generate_demo_credentials.py  root_demo_credentials.py  sap_root_controller.py
src/: main.c  sap_central.c  sap_credentials.c  sap_credentials.h  sap_crypto.c  sap_crypto.h  sap_peripheral.c  sap_protocol.h  sap_service.c  sap_service.h  sap_trace.h
subsys/bluetooth/sap/: sap_crypto.c  sap_service.c
zephyr/: module.yml
